Begin working on porting it to Cocoa.

--- a/macosx/Info-np2__Upgraded_.plist
+++ b/macosx/Info-np2__Upgraded_.plist
@@ -251,5 +251,7 @@
 	<true/>
 	<key>LSHasLocalizedDisplayName</key>
 	<true/>
+	<key>NSMainNibFile</key>
+	<string>MainMenu</string>
 </dict>
 </plist>
